# agentic_frameworks_exploration

./: .env.example  .gitignore  Makefile  README.md
NOT_CONSIDERED_BUT_GOOD/rig/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/_shared/src/: lib.rs
NOT_CONSIDERED_BUT_GOOD/rig/_shared_mcp/src/: main.rs
NOT_CONSIDERED_BUT_GOOD/rig/agent/coding_agent/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/foundation/augmented_llm/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/workflow/evaluator_optimizer/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/workflow/orchestrator_workers/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/workflow/parallelization/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/workflow/prompt_chaining/: Cargo.toml
NOT_CONSIDERED_BUT_GOOD/rig/workflow/routing/: Cargo.toml
_shared/: .env.example  README.md  pyproject.toml
_shared/data/: countries.json
_shared/data/country_kb/: australia.md  brazil.md  canada.md  china.md  egypt.md  france.md  germany.md  india.md  indonesia.md  italy.md  japan.md  mexico.md  nigeria.md  russia.md  saudi_arabia.md  south_africa.md  south_korea.md  spain.md  united_kingdom.md  united_states.md
_shared/data/llm_wiki/: index.md
_shared/data/llm_wiki/australia/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/brazil/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/canada/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/china/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/concepts/: aging_and_demographics.md  ancient_civilizations.md  biodiversity_and_rainforests.md  constitutional_monarchies.md  energy_and_resources.md  global_cultural_exports.md
_shared/data/llm_wiki/egypt/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/france/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/germany/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/india/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/indonesia/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/italy/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/japan/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/mexico/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/nigeria/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/russia/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/saudi_arabia/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/south_africa/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/south_korea/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/spain/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/united_kingdom/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/data/llm_wiki/united_states/: culture_and_history.md  geography_and_environment.md  governance_and_economy.md
_shared/scripts/: compile_wiki.py  generate_countries_json.py
_shared/skills/country-comparison/: SKILL.md
_shared/skills/country-profile/: SKILL.md
_shared/skills/regional-analysis/: SKILL.md
_shared/skills/report-formatting/: SKILL.md
_shared/src/: country_tools_server.py
_shared/src/mcp_servers/: __init__.py  pattern1_server.py  pattern2_server.py  pattern5_server.py
_shared/src/shared/: __init__.py  config.py  mcp_server.py  metrics.py  tasks.py  tool_stubs.py
_shared/src/tools/: __init__.py  calculator.py  country_kb_search.py  country_lookup.py  wiki_read.py
hermes/agent/coding_agent/: pyproject.toml
hermes/agent/coding_agent/src/: main.py
hermes/agents/3_agent_with_mcp_tools_and_skills/: README.md  experiments.bash  logs.txt  pyproject.toml
hermes/agents/3_agent_with_mcp_tools_and_skills/src/: __init__.py  agent.py  main.py  prompts.py  skill_tools.py
langgraph/agents/2_agent_with_rag_mcp_tool/: README.md  experiments.bash  jun_2_logs.txt  logs.txt  pyproject.toml
langgraph/agents/2_agent_with_rag_mcp_tool/src/: __init__.py  agent.py  main.py  prompts.py
langgraph/agents/4_agent_with_memory_and_chat/: README.md  example_chat_interaction.md  logs.txt  pyproject.toml  tech_code_and_error_learnings.md
langgraph/agents/4_agent_with_memory_and_chat/memory_store/: .gitkeep  session.json
langgraph/agents/4_agent_with_memory_and_chat/src/: __init__.py  agent.py  chat_ui.py  main.py  memory.py  prompts.py
langgraph/agents/5_agent_with_memory_and_chat_no_rag/: README.md  logs.txt  pyproject.toml
langgraph/agents/5_agent_with_memory_and_chat_no_rag/memory_store/: session.json
langgraph/agents/5_agent_with_memory_and_chat_no_rag/src/: __init__.py  agent.py  (+4 more)
langgraph/foundation/aws_learning_agent/: pyproject.toml
langgraph/workflow/parallelization/: pyproject.toml
langgraph_exploration/: .env.example  .gitignore  README.md  pyproject.toml  written_communication.txt
langgraph_exploration/src/lang_graph_exploration/: __init__.py  cli.py  config.py  models.py
langgraph_exploration/tests/: test_drafter_agent.py  test_graphs.py  test_rag_agent.py  test_react_agent.py
strands/agents/1_agent_with_multiple_mcp_tools/: README.md  experiments.bash  logs.txt  plan.md  pyproject.toml
strands/agents/3_agent_with_mcp_tools_and_skills/: README.md  experiments.bash  logs.txt  pyproject.toml
strands/workflow/orchestrator_workers/: pyproject.toml
(+177 files in other folders)
