[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "mcp[cli]>=1.0",
]

[project.scripts]
mcp-tools = "shared.mcp_server:main"

[project.optional-dependencies]
# RAG dependencies for vector search and embeddings
# Pre-download embedding model for offline use:
# python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
rag = [
    "pymilvus>=2.4",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
