[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-graph-exploration"
version = "0.1.0"
description = "Local LangGraph experiments based on the O'Reilly article notes"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "chromadb>=1.0.8",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.1",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require local Ollama models or document retrieval assets",
]