[project]
name = "hermes-agent-with-mcp-tools-and-skills"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "openai>=1.0",
    "mcp",
    "sentence-transformers>=3.0",
    "pymilvus[milvus_lite]>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]