[project]
name = "agent-with-rag-mcp-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-ollama>=0.3",
    "langchain-mcp-adapters>=0.1",
    "python-dotenv>=1.0",
    "mcp[cli]>=1.0",
    "sentence-transformers>=3.0",
    "pymilvus[milvus_lite]>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
