[project]
name = "langgraph-parallelization"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-ollama>=0.3",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { path = "../../../_shared", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]
