[project]
name = "strands-orchestrator-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[mcp]>=0.1",
    "shared",
    "ollama-adapter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { path = "../../../_shared", editable = true }
ollama-adapter = { path = "../../_ollama_adapter", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]
